apps/argocd/argocd-service-endpoints.yaml
### There is no TLS backend for the HTTP-01 challenge, only plain-text HTTP
kind: Service
apiVersion: v1
metadata:
  name: argocd-public-challenge
  namespace: argocd
spec:
  ports:
    - name: argocd-not-found
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 0
    - name: argocd-http-challenge
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 0
---
kind: Endpoints
apiVersion: v1
metadata:
  name: argocd-public-challenge
  namespace: argocd
subsets:
- addresses:
  - ip: 10.17.12.202
  ports:
  - port: 443
    name: argocd-not-found
  - port: 80
    name: argocd-http-challenge
