apps/argocd/argocd-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-public-access
  namespace: argocd
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`argocd.hephy.pro`)
    services:
    - kind: Service
      name: argocd-public-challenge
      namespace: argocd
      port: 80
#---
#apiVersion: traefik.containo.us/v1alpha1
#kind: IngressRoute
#metadata:
#  name: argocd-public-access-https
#  namespace: argocd
#spec:
#  entryPoints:
#    - websecure
#  routes:
#  - kind: Rule
#    match: Host(`argocd.hephy.pro`)
#    priority: 10
#    services:
#      - name: argocd-server
#        port: 80
#  - kind: Rule
#    match: Host(`argocd.hephy.pro`) && Headers(`Content-Type`, `application/grpc`)
#    priority: 11
#    services:
#      - name: argocd-server
#        port: 80
#        scheme: h2c
#  tls:
#    passthrough: true
